--- a/student.ipynb
+++ b/student.ipynb
@@ -873,14 +873,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multicolinearity"
+    "## Multicollinearity"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Multicolinearity will be explored and dealt with so that a viable model can be built. To start, the seaborn heatmap will be used to see what variables may have multicolinearity."
+    "Multicollinearity will be explored and dealt with so that a viable model can be built. To start, the seaborn heatmap will be used to see what variables may have multicolinearity."
    ]
   },
   {
@@ -3360,7 +3360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Multicolinearity"
+    "### Multicollinearity"
    ]
   },
   {
@@ -4292,7 +4292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
